updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a Creative Manager at John Deere working on Deere.com. I know HTML, CSS, and some JS, but my skills are not as high as they should be. I'm also an artist and I do illustration and painting.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I'm a NC native and grew up in Garner</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Mtn Biking, Drawing, Writing, Kayaking, and I am in fitness and teach yoga.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I would love to do illusration for a living, but I would also enjoy working with movie companies or doing animation and game design.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Apex</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to be able to bring my ideas for the web to life and be able to work with other developers to make creative ideas reality.</p>
     </section>
 
     <footer id="footer">
